<resources>
    <!--common_hint-->
    <string name="app_name">稳然</string>
    <string name="success">成功了</string>
    <string name="failure">失败</string>
    <string name="no_fast_click">请勿快速点击</string>
    <string name="searching">正在搜索</string>
    <string name="please_input_user_name">请输入手机号</string>
    <string name="please_input_psw">请输入8位~50位字母和数字</string>
    <string name="get_verification_code">获取验证码</string>
    <string name="please_input_verification_code">请输入验证码</string>
    <string name="app_token_over_due">请登录</string>
    <string name="no_digit">不是数字类型</string>
    <string name="developing">敬请期待！</string>
    <string name="success_for_share">分享成功了</string>
    <string name="failure_for_share">分享失败</string>
    <string name="cancel_for_share">分享取消了</string>
    <string name="common_finish">完成</string>
    <string name="bind_phone">绑定手机号码</string>
    <string name="cancel">取消</string>
    <string name="more">更多</string>
    <string name="fine_no_data">暂无数据</string>
    <string name="click_me_to_retry">请稍后重试</string>

    <!--bluetooth_ask-->
    <string name="is_open_bluetooth">是否打开蓝牙?</string>

    <!--login-->
    <string name="login_et_username_ht">请输入您的手机号</string>
    <string name="login_et_psw_ht">请输入您的密码</string>
    <string name="login_tv_to_register_ht">注册新账号</string>
    <string name="login_tv_forget_psw">忘记密码？</string>
    <string name="login_tv_login">登录</string>

    <!--register-->
    <string name="register_tv_send_code_tt">获取验证码</string>
    <string name="register_et_psw_ht">请输入6-14位的字母/数字</string>
    <string name="register_et_invitation_code_ht">请输入您的邀请码</string>
    <string name="register_tv_register_tt">立即注册</string>
    <string name="register_cb_agree_tt">我已同意</string>
    <string name="register_tv_agree_tt">《用户注册协议》</string>
    <string name="register_et_verification_code_ht">请输入手机验证码</string>
    <string name="reset_psw_et_psw_ht">请输入新密码</string>
    <string name="reset_psw_et_confirm_psw_ht">请重新输入新密码</string>
    <string name="register_title_tx">注册</string>
    <string name="register_hint_no_phone">请输入手机号码</string>
    <string name="reset_reset">找回密码</string>

    <!--base title-->
    <string name="base_title_tv_right_tt">留言</string>

    <!--bind phone-->
    <string name="bind_phone_tv_bind_tt">立即绑定</string>
    <string name="home">首页</string>
    <string name="shopping_cart">已购</string>
    <string name="mine">我的</string>




</resources>
